Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <div class="container">
 
-    <h1 class="title">Ничипоренко Юлій</h1>
+    <h1 class="title">Сторожев Максим</h1>
 
     <section>
         <h2 class="section-title">Про мене</h2>
         <p>
-            Вітаю! Мене звуть <b>Ничипоренко Юлій</b> я люблю вчити нові технології,
+            Вітаю! Мене звуть <b>Сторожев Максим</b> я люблю вчити нові технології,
             займатися творчістю та створювати цікаві проєкти. Мрію розвиватися у сфері IT.
         </p>
     </section>
@@ -34,8 +34,8 @@
     <section>
         <h2 class="section-title">Контактна інформація</h2>
 
-        <p><b>Email:</b> uliq@example.com</p>
-        <p><b>Телефон:</b> +380 50 303 14 74</p>
+        <p><b>Email:</b> dlldl@example.com</p>
+        <p><b>Телефон:</b> +380 68 953 04 21</p>
         <p><b>Місто:</b> Україна</p>
 
         <em>Буду радий новим знайомствам та спілкуванню!</em>
