--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мій персональний сайт</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="google-site-verification" content="O9zpl_hjbsOh4CkteAJUxaJuZNGIXwMflrA9dZhmWtc" />
 </head>
 <body>
 
